settings de base

--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,7 @@
             "log_channel_id": 1269273014046949477,
             "mod_roles": [],
             "muted_users": {},
+            "warned_users": {},
             "banned_users": {}
         }
     }
