--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ token.txt
 .DS_Store
 python
 python3
+users.json
+users_list4Serveur_de_jeu_de_moi.csv 
+users_list3FallenWorld.csv 
+users_list168Patch_7_Testing.csv
